--- a/vercel.json
+++ b/vercel.json
@@ -11,13 +11,7 @@
         { "key": "Referrer-Policy",          "value": "strict-origin-when-cross-origin" }
       ]
     },
-    {
-      "source": "/js/(.*)",
-      "headers": [{ "key": "Cache-Control", "value": "public, max-age=3600" }]
-    },
-    {
-      "source": "/css/(.*)",
-      "headers": [{ "key": "Cache-Control", "value": "public, max-age=3600" }]
-    }
+    { "source": "/js/(.*)",  "headers": [{ "key": "Cache-Control", "value": "public, max-age=3600" }] },
+    { "source": "/css/(.*)", "headers": [{ "key": "Cache-Control", "value": "public, max-age=3600" }] }
   ]
 }
