--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,20 @@
 {
   "cleanUrls": true,
   "trailingSlash": false,
+  "rewrites": [
+    { "source": "/",                          "destination": "/index.html" },
+    { "source": "/shop",                      "destination": "/shop.html" },
+    { "source": "/login",                     "destination": "/login.html" },
+    { "source": "/register",                  "destination": "/register.html" },
+    { "source": "/account",                   "destination": "/account.html" },
+    { "source": "/admin",                     "destination": "/admin.html" },
+    { "source": "/checkout",                  "destination": "/checkout.html" },
+    { "source": "/contact",                   "destination": "/contact.html" },
+    { "source": "/forgot-password",           "destination": "/forgot-password.html" },
+    { "source": "/reset-password",            "destination": "/reset-password.html" },
+    { "source": "/cgv",                       "destination": "/cgv.html" },
+    { "source": "/politique-confidentialite", "destination": "/politique-confidentialite.html" }
+  ],
   "headers": [
     {
       "source": "/(.*)",
